--- a/yummy/menu.html
+++ b/yummy/menu.html
@@ -66,26 +66,17 @@
     <div class="col-7 detail_menu">
       <p class="title"> <span style="color:#FD5B00;">Thực đơn </span>Bữa sáng</p>
       <p class="sub_title">Tất cả các ngày trong tuần 6h30-10h30</p>
-      <div class="dish">
-        <p class="dish_name">Trứng tráng rau củ</p>
-        <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-      </div>
-      <div class="dish">
-        <p class="dish_name">Trứng tráng rau củ</p>
-        <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-      </div>
-      <div class="dish">
-        <p class="dish_name">Trứng tráng rau củ</p>
-        <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-      </div>
-      <div class="dish">
-        <p class="dish_name">Trứng tráng rau củ</p>
-        <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-      </div>
-      <div class="dish">
-        <p class="dish_name">Trứng tráng rau củ</p>
-        <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-      </div>
+      <ul class="leaders">
+        <li><span class="dish_name">Bít tết bò Kobe</span><span class="dish_info">150.000VND</span></li>
+        <li><span class="dish_name">Gà nướng ngũ vị hương</span><span class="dish_info">150.000VND</span></li>
+        <li><span class="dish_name">Gà cay phô mai</span><span class="dish_info">150.000VND</span></li>
+        <li><span class="dish_name">Trứng tráng rau củ</span><span class="dish_info">150.000VND</span></li>
+        <li><span class="dish_name">Sừng trâu hầm nhân sâm</span><span class="dish_info">100.000VND</span></li>
+        <li><span class="dish_name">Bánh mì ốp trứng cút</span><span class="dish_info">100.000VND</span></li>
+        <li><span class="dish_name">Pate Italy</span><span class="dish_info">100.000VND</span></li>
+        <li><span class="dish_name">Sườn sốt me</span><span class="dish_info">100.000VND</span></li>
+        <li><span class="dish_name">Châu chấu chiên tỏi ớt</span><span class="dish_info">100.000VND</span></li>
+      </ul>
     </div>
     <div class="col-5 select_menu">
       <div class="row select">
