--- a/yummy/shop.html
+++ b/yummy/shop.html
@@ -64,13 +64,16 @@
 <section class="section_1 container-fluid">
   <div class="set_food">
     <div class="row set_food_area">
-      <div class="col-6 image_set"> <img src="./images/shop_Page/set1.jpg" alt=""></div>
+      <div class="col-6 image_set"> </div>
       <div class="col-6 set_content">
         <div class="text_content">
           <p class="set_price text-center">199.000 vnd</p>
           <hr>
           <p class="set_name text-center">COMBO TÌNH YÊU</p>
           <p class="sub_set text-center">2 bánh mỳ, 2 set trái cây 4 mùa, 2 trà trái cây</p>
+          <div class="text-center btn_detail">
+            <button class="btn" type="button">Mua ngay</button>
+          </div>
         </div>
       </div>
     </div>
@@ -90,7 +93,7 @@
   </div>
   <div class="card_main">
     <div class="card-deck row">
-      <div class="col-3">      
+      <div class="col-md-4 col-lg-3 col-sm-6">      
         <div class="card">
           <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp5.jpg" alt="Card image cap">
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
@@ -104,7 +107,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">      
+      <div class="col-md-4 col-lg-3 col-sm-6">      
         <div class="card">
           <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp1.jpg" alt="Card image cap">
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
@@ -118,7 +121,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">      
+      <div class="col-md-4 col-lg-3 col-sm-6">      
         <div class="card">
           <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
@@ -132,7 +135,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">      
+      <div class="col-md-4 col-lg-3 col-sm-6">      
         <div class="card">
           <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp3.jpg" alt="Card image cap">
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
@@ -146,7 +149,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">      
+      <div class="col-md-4 col-lg-3 col-sm-6">      
         <div class="card">
           <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp4.jpg" alt="Card image cap">
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
@@ -160,7 +163,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">      
+      <div class="col-md-4 col-lg-3 col-sm-6">      
         <div class="card">
           <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp6.jpg" alt="Card image cap">
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
@@ -174,7 +177,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">      
+      <div class="col-md-4 col-lg-3 col-sm-6">      
         <div class="card">
           <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp7.jpg" alt="Card image cap">
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
@@ -188,7 +191,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">      
+      <div class="col-md-4 col-lg-3 col-sm-6">      
         <div class="card">
           <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp8.jpg" alt="Card image cap">
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
