--- a/yummy/singerBlog.html
+++ b/yummy/singerBlog.html
@@ -155,12 +155,12 @@
       </div>
     </div>
     <div class="footer_main container-fluid row">
-      <div class="col-3 bottom_left text-center">
+      <div class="col-sm-3 bottom_left text-center">
         <div class="logo">Yummy</div>
         <div class="top_social_bar"><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a><a href="#"><i class="fab fa-skype" aria-hidden="true"></i></a><a href="#"><i class="fab fa-dribbble" aria-hidden="true"></i></a></div>
       </div>
-      <div class="col-6"></div>
-      <div class="col-3 bottom_right text-left">
+      <div class="col-sm-6"></div>
+      <div class="col-sm-3 bottom_right text-left">
         <div class="address"> <i class="fas fa-map-marker-alt"> </i>Tây Hồ Hà Nội</div>
         <div class="phone"> <i class="fas fa-mobile-alt"> </i>0366312255</div>
         <div class="email"> <i class="fas fa-envelope"></i>yummy@gmail.com</div>
