--- a/yummy/index.html
+++ b/yummy/index.html
@@ -115,8 +115,8 @@
   </div>
   <div class="text-center">
     <div class="menu_section_2">
-      <nav class="navbar navbar-expand-sm navbar-light">
-        <ul class="navbar-nav">
+      <nav class="navbar">
+        <ul class="navbar-nav d-flex flex-row">
           <li class="nav-item"><a class="nav-link" href="#">TẤT CẢ</a></li>
           <li class="nav-item"><a class="nav-link" href="#">THỊT</a></li>
           <li class="nav-item"><a class="nav-link" href="#">CÁ</a></li>
@@ -142,8 +142,6 @@
         <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img4.jpg" alt="Xem chi tiết"></a></div>
         </article>
-      </div>
-      <div class="grid-container">
         <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img5.jpg" alt="Xem chi tiết"></a></div>
         </article>
@@ -196,48 +194,24 @@
   <div class="container">
     <div class="row">
       <div class="col-6 dish">
-        <div>
-          <p class="dish_name">Trứng tráng rau củ</p>
-          <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-        </div>
-        <div>
-          <p class="dish_name">Trứng tráng rau củ</p>
-          <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-        </div>
-        <div>
-          <p class="dish_name">Trứng tráng rau củ</p>
-          <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-        </div>
-        <div>
-          <p class="dish_name">Trứng tráng rau củ</p>
-          <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-        </div>
-        <div>
-          <p class="dish_name">Trứng tráng rau củ</p>
-          <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-        </div>
+        <ul class="leaders">
+          <li><span class="dish_name">Bít tết bò Kobe</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Gà nướng ngũ vị hương</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Gà cay phô mai</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Trứng tráng rau củ</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Sừng trâu hầm nhân sâm</span><span class="dish_info">100.000VND</span></li>
+          <li><span class="dish_name">Sừng trâu hầm nhân sâm</span><span class="dish_info">100.000VND</span></li>
+        </ul>
       </div>
       <div class="col-6 dish">
-        <div>
-          <p class="dish_name">Trứng tráng rau củ</p>
-          <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-        </div>
-        <div>
-          <p class="dish_name">Trứng tráng rau củ</p>
-          <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-        </div>
-        <div>
-          <p class="dish_name">Trứng tráng rau củ</p>
-          <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-        </div>
-        <div>
-          <p class="dish_name">Trứng tráng rau củ</p>
-          <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-        </div>
-        <div>
-          <p class="dish_name">Trứng tráng rau củ</p>
-          <p class="dish_info">Kèm bánh mỳ và sốt chua cay. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .50,000 VND</p>
-        </div>
+        <ul class="leaders">
+          <li><span class="dish_name">Bít tết bò Kobe</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Gà nướng ngũ vị hương</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Gà cay phô mai</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Trứng tráng rau củ</span><span class="dish_info">150.000VND</span></li>
+          <li><span class="dish_name">Sừng trâu hầm nhân sâm</span><span class="dish_info">100.000VND</span></li>
+          <li><span class="dish_name">Sừng trâu hầm nhân sâm</span><span class="dish_info">100.000VND</span></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -272,12 +246,12 @@
       </div>
     </div>
     <div class="footer_main container-fluid row">
-      <div class="col-3 bottom_left text-center">
+      <div class="col-sm-3 bottom_left text-center">
         <div class="logo">Yummy</div>
         <div class="top_social_bar"><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a><a href="#"><i class="fab fa-skype" aria-hidden="true"></i></a><a href="#"><i class="fab fa-dribbble" aria-hidden="true"></i></a></div>
       </div>
-      <div class="col-6"></div>
-      <div class="col-3 bottom_right text-left">
+      <div class="col-sm-6"></div>
+      <div class="col-sm-3 bottom_right text-left">
         <div class="address"> <i class="fas fa-map-marker-alt"> </i>Tây Hồ Hà Nội</div>
         <div class="phone"> <i class="fas fa-mobile-alt"> </i>0366312255</div>
         <div class="email"> <i class="fas fa-envelope"></i>yummy@gmail.com</div>
