--- a/yummy/singerProduct.html
+++ b/yummy/singerProduct.html
@@ -101,7 +101,7 @@
 <section class="section_2 container">
   <div class="comment">BÌNH LUẬN</div>
   <hr>
-  <div class="row"> 
+  <div class="row comment_area">
     <div class="col-1 avatar_comter"><img src="images/singerProduct_Page/sontung.png" alt=""></div>
     <div class="col-11 form_comment">
       <div class="vote"><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span></div>
@@ -136,7 +136,7 @@
   <div class="title">SẢN PHẨM LIÊN QUAN</div>
   <hr>
   <div class="card-deck row">
-    <div class="col-3">      
+    <div class="col-md-4 col-lg-3 col-sm-6">      
       <div class="card">
         <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp5.jpg" alt="Card image cap">
           <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
@@ -150,7 +150,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">      
+    <div class="col-md-4 col-lg-3 col-sm-6">      
       <div class="card">
         <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp1.jpg" alt="Card image cap">
           <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
@@ -164,7 +164,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">      
+    <div class="col-md-4 col-lg-3 col-sm-6">      
       <div class="card">
         <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
           <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
@@ -178,7 +178,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">      
+    <div class="col-md-4 col-lg-3 col-sm-6">      
       <div class="card">
         <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp3.jpg" alt="Card image cap">
           <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
