--- a/yummy/singerBlog.html
+++ b/yummy/singerBlog.html
@@ -117,13 +117,28 @@
     </div>
     <div class="col-3 left_area">
       <!-- Search form-->
-      <form class="form-inline md-form form-sm active-cyan-2 mt-2">
-        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Tìm kiếm" aria-label="Search"><i class="fas fa-search" aria-hidden="true"></i>
-      </form>
-      <div class="about_us">Về chúng tôi
+      <div class="search_form">TÌM KIẾM BÀI VIẾT
+        <form class="form-inline md-form form-sm active-cyan-2 mt-2">
+          <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Tìm kiếm" aria-label="Search"><i class="fas fa-search" aria-hidden="true"></i>
+        </form>
+      </div>
+      <div class="about_us">BÀI VIẾT MỚI CẬP NHẬP
         <hr>
-        <div class="text-center"> <img src="./images/singerBlog_page/author1.png" alt="image"></div>
-        <div class="intro">Hello! My name is Karen. It’s so very nice to meet you. I happily share my passion for all things I cook.</div>
+        <ul class="mt-search">
+          <li><a href="">Hến sào me</a></li>
+          <li><a href="">Yến sốt chua cay</a></li>
+          <li><a href="">Thịt trâu sốt cà chua</a></li>
+          <li><a href="">Mướp sào lòng lợn</a></li>
+          <li><a href="">Ẩm thực quanh ta</a></li>
+        </ul>
+      </div>
+      <div class="about_us">DANH MỤC BÀI VIẾT
+        <hr>
+        <ul class="mt-search">
+          <li><a href="">Tất cả bài viết</a></li>
+          <li><a href="">Công thức nấu ăn</a></li>
+          <li><a href="">Khám phá ẩm thực</a></li>
+        </ul>
       </div>
     </div>
   </div>
